--- a/index.html
+++ b/index.html
@@ -11,6 +11,27 @@
     <title>My Library TOP</title>
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-light bg-light">
+            <div class="container-fluid px-4 justify-content-center">
+              <a class="navbar-brand fs-1 d-flex align-items-center" href="#">
+                <img src="img/libros-apilados.png" alt="" width="40" height="34" class="d-inline-block ">
+                <h1 class="px-2 fw-bold">My Library</h1>
+              </a>
+            </div>
+          </nav>
+    </header>
+    <main>
+        <div class="container">
+
+        </div>
+    </main>
+    <footer class="footer mt-auto bg-light d-flex align-items-center">
+        <div class="container text-center d-flex justify-content-center">
+          <p class="m-0 text-muted">Designed by Tauser</p> 
+          <a href="https://github.com/leituu" target="_blank"><img src="img/github.png" alt="" width="25" height="25" class="d-inline-block mx-2"></a>
+        </div>
+      </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
