--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <title>My Library TOP</title>
 </head>
@@ -22,9 +21,26 @@
           </nav>
     </header>
     <main>
-        <div class="container">
-
-        </div>
+        <section class="form-container">
+            <form action="" class="d-flex flex-column px-3 pb-3">
+                <div class="close-btn d-flex justify-content-end pt-2">
+                    <span id="closeForm" class="material-icons-outlined white">
+                        close
+                        </span>
+                </div>
+                <label for="bookName"><input id="bookName" class="form-control my-1" type="text" placeholder="Book Name" aria-label="default input example"></label>
+                <label for="bookAuthor"><input id="bookAuthor" class="form-control my-2" type="text" placeholder="Book Author" aria-label="default input example"></label>
+                <label for="bookPages"><input id="bookPages" class="form-control my-2" type="number" placeholder="Book Pages" aria-label="default input example"></label>
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      Have you read this book?
+                    </label>
+                  </div>
+                <button type="button" class="btn btn-light my-2">Add</button>
+            </form>
+        </section>
+        <section class="books"></section>
     </main>
     <footer class="footer mt-auto bg-light d-flex align-items-center">
         <div class="container text-center d-flex justify-content-center">
