--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </nav>
     </header>
     <main>
-        <section class="form-container">
+        <section class="form-container d-none">
             <form action="" class="d-flex flex-column px-3 pb-3">
                 <div class="close-btn d-flex justify-content-end pt-2">
                     <span id="closeForm" class="material-icons-outlined white">
@@ -32,15 +32,45 @@
                 <label for="bookAuthor"><input id="bookAuthor" class="form-control my-2" type="text" placeholder="Book Author" aria-label="default input example"></label>
                 <label for="bookPages"><input id="bookPages" class="form-control my-2" type="number" placeholder="Book Pages" aria-label="default input example"></label>
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+                    <input class="form-check-input" type="checkbox" value="true" id="bookRead">
                     <label class="form-check-label" for="flexCheckDefault">
                       Have you read this book?
                     </label>
                   </div>
-                <button type="button" class="btn btn-light my-2">Add</button>
+                <button id="addBook" type="button" class="btn btn-light my-2">Add</button>
             </form>
         </section>
-        <section class="books"></section>
+        <section class="">
+            <button id="openForm" type="button" class="btn btn-light my-4 d-block m-auto">Add New Book</button>
+            <div class="book-container pt-4 d-flex flex-wrap">
+                <div class="book-card d-flex flex-column">
+                    <div class="book-title pt-3 px-2 fw-bold text-center ">Harry Potter y el misterio del principe</div>
+                    <div class="book-author pt-1 px-2 text-center">J.R.R. Tolkien</div>
+                    <div class="book-pages pt-1 px-2 text-center fst-italic  text-muted">1234 pages</div>
+                    <div class="book-options d-flex justify-content-between py-3">
+                        <span class="material-icons-outlined ms-3 read-mark">
+                            remove_red_eye
+                        </span>                    
+                        <span class="material-icons-outlined me-3 delete">
+                            delete
+                        </span>
+                    </div>
+                </div>
+                <div class="book-card d-flex flex-column">
+                    <div class="book-title pt-3 px-2 fw-bold text-center ">Harry Potter y el misterio del principe</div>
+                    <div class="book-author pt-1 px-2 text-center">J.R.R. Tolkien</div>
+                    <div class="book-pages pt-1 px-2 text-center fst-italic text-muted">1234 pages</div>
+                    <div class="book-options d-flex justify-content-between py-3">
+                        <span class="material-icons-outlined ms-3 read-mark">
+                            remove_red_eye
+                        </span>                    
+                        <span class="material-icons-outlined me-3 delete">
+                            delete
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer mt-auto bg-light d-flex align-items-center">
         <div class="container text-center d-flex justify-content-center">
