--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button id="addBook" type="button" class="btn btn-light my-2">Add</button>
             </form>
         </section>
-        <section class="">
+        <section class="library">
             <button id="openForm" type="button" class="btn btn-light my-4 d-block m-auto">Add New Book</button>
             <div class="book-container pt-4 d-flex flex-wrap">
                 <div class="book-card d-flex flex-column">
