se modulariza la app

--- a/index.html
+++ b/index.html
@@ -43,45 +43,6 @@
         <section class="library">
             <button id="openForm" type="button" class="btn btn-light my-4 d-block m-auto">Add New Book</button>
             <div class="book-container pt-4 d-flex flex-wrap">
-                <div class="book-card d-flex flex-column">
-                    <div class="book-title pt-3 px-2 fw-bold text-center lh-sm fs-5">Harry Potter y el misterio del principe</div>
-                    <div class="book-author pt-2 px-2 text-center">J.R.R. Tolkien</div>
-                    <div class="book-pages pt-1 px-2 text-center fst-italic  text-muted">1234 pages</div>
-                    <div class="book-options d-flex justify-content-between py-3">
-                        <span class="material-icons-outlined ms-3 read-mark">
-                            remove_red_eye
-                        </span>                    
-                        <span class="material-icons-outlined me-3 delete">
-                            delete
-                        </span>
-                    </div>
-                </div>
-                <div class="book-card d-flex flex-column">
-                    <div class="book-title pt-3 px-2 fw-bold text-center lh-sm fs-5">Harry Potter y la camara secreta</div>
-                    <div class="book-author pt-2 px-2 text-center">J.R.R. Tolkien</div>
-                    <div class="book-pages pt-1 px-2 text-center fst-italic  text-muted">1234 pages</div>
-                    <div class="book-options d-flex justify-content-between py-3">
-                        <span class="material-icons-outlined ms-3 read-mark">
-                            remove_red_eye
-                        </span>                    
-                        <span class="material-icons-outlined me-3 delete">
-                            delete
-                        </span>
-                    </div>
-                </div>
-                <div class="book-card d-flex flex-column">
-                    <div class="book-title pt-3 px-2 fw-bold text-center lh-sm fs-5">el senor de los anillos: el retorno del rey</div>
-                    <div class="book-author pt-2 px-2 text-center">J.R.R. Tolkien</div>
-                    <div class="book-pages pt-1 px-2 text-center fst-italic  text-muted">1234 pages</div>
-                    <div class="book-options d-flex justify-content-between py-3">
-                        <span class="material-icons-outlined ms-3 read-mark">
-                            remove_red_eye
-                        </span>                    
-                        <span class="material-icons-outlined me-3 delete">
-                            delete
-                        </span>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
@@ -92,6 +53,9 @@
         </div>
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="./UI.js" type="module"></script>
+    <script src="./Book.js" type="module"></script>
+    <script src="./Library.js" type="module"></script>
+    <script src="./app.js" type="module" defer></script>
 </body>
 </html>
